test/conformance/chainsaw/authorize/conditional-effects/crd.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: authorizingpolicies.policies.kyverno.io
spec:
  group: policies.kyverno.io
  names:
    kind: AuthorizingPolicy
    listKind: AuthorizingPolicyList
    plural: authorizingpolicies
    singular: authorizingpolicy
  scope: Cluster
  versions:
  - name: v1alpha1
    served: true
    storage: true
    schema:
      openAPIV3Schema:
        type: object
        properties:
          apiVersion:
            type: string
          kind:
            type: string
          metadata:
            type: object
          spec:
            type: object
            x-kubernetes-preserve-unknown-fields: true
          status:
            type: object
            x-kubernetes-preserve-unknown-fields: true
    subresources:
      status: {}
